--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
+spring.main.allow-circular-references:true
 
+spring.datasource.url=jdbc:mysql://localhost:3306/wishlist?createTableIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=saddam
+spring.jpa.hibernate.ddl-auto=update
